syntax = "proto3";

import "google/protobuf/wrappers.proto";

package user;

service UserService {
	rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {	
}

message UserDto {
	string user_id = 1;
	//Can be null, check before using
	google.protobuf.StringValue full_name = 2;
	string email = 3;
}

message UserResponse {
	repeated UserDto users = 1;
}